# rust-concurrency-cookbook-code

./: .gitignore  Cargo.toml  README.md
chapter_01_thread/: Cargo.toml
chapter_01_thread/examples/: concurrency_and_current_thread_count.rs  control_new_thread.rs  create_thread.rs  crossbeam_scoped_thread.rs  current_thread.rs  go_like_start_thread.rs  move.rs  panic.rs  rayon_scoped_thread.rs  scoped_thread.rs  send_wrapper.rs  set_affinity.rs  set_thread_priority.rs  sleep_and_park.rs  thread_builder.rs  threadlocal.rs
chapter_01_thread/src/: lib.rs
chapter_02_thread_pool/: Cargo.toml
chapter_02_thread_pool/examples/: executor_service.rs  fast_threadpool.rs  poolite.rs  rayon_thread_pool.rs  rusty_pool.rs  scheduled_thread_pool.rs  scoped_threadpool.rs  threadpool.rs  threadpool_executor.rs
chapter_02_thread_pool/src/: lib.rs
chapter_03_async_await/: Cargo.toml
chapter_03_async_await/examples/: async_std.rs  futures.rs  futures_lite.rs  macro.rs  smol.rs  tokio.rs
chapter_04_container_sync_primitive/: Cargo.toml
chapter_04_container_sync_primitive/examples/: box.rs  cell.rs  cow.rs  rc.rs
chapter_05_basic_sync_primitive/: Cargo.toml
chapter_05_basic_sync_primitive/examples/: arc.rs  barrier.rs  mpsc.rs  mutex.rs  once.rs  ordering.rs  rwmutex.rs
chapter_06_concurrency_collection/: Cargo.toml
chapter_06_concurrency_collection/examples/: arc_swap.rs
chapter_07_process/: Cargo.toml
chapter_07_process/examples/: process.rs
