[workspace]
members = [
    "chapter_01_thread",
    "chapter_02_thread_pool",
    "chapter_03_async_await",
    "chapter_04_container_sync_primitive",
    "chapter_05_basic_sync_primitive",
]
resolver = "2"


[workspace.dependencies]
affinity = "0.1.2"
core_affinity = "0.8.1"
crossbeam = "0.8.3"
go-spawn = "0.1.2"
num_cpus = "1.16.0"
num_threads = "0.1.6"
send_wrapper = "0.6.0"
thread-amount = "0.1.3"
thread-control = "0.1.2"
thread-priority = "0.15.1"
executor-service = "0.2.2"
fast-threadpool = "0.3.0"
poolite = "0.7.1"
rayon = "1.8.0"
rusty_pool = "0.7.0"
scheduled-thread-pool = "0.2.7"
scoped-tls = "1.0.1"
scoped_threadpool = "0.1.9"
threadpool = "1.8.1"
threadpool-executor = "0.3.2"
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
futures-lite = "2.2.0"
async-std = "1.12.0"
smol = "2.0.0"
beef = "0.5.2"
