[package]
name = "chapter_01_thread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
affinity = { workspace = true }
core_affinity = { workspace = true }
crossbeam = { workspace = true }
go-spawn = { workspace = true }
num_cpus = { workspace = true }
num_threads = { workspace = true }
rayon = { workspace = true }
send_wrapper = { workspace = true }
thread-amount = { workspace = true }
thread-control = { workspace = true }
thread-priority = { workspace = true }
