[package]
name = "chapter_02_thread_pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
executor-service = { workspace = true }
fast-threadpool = { workspace = true }
poolite = { workspace = true }
rayon = { workspace = true }
rusty_pool = { workspace = true }
scheduled-thread-pool = { workspace = true }
scoped-tls = { workspace = true }
scoped_threadpool = { workspace = true }
threadpool = { workspace = true }
threadpool-executor = { workspace = true }
tokio = { workspace = true, features = ["full"] }
