[package]
name = "chapter_03_async_await"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = { workspace = true }
async-std = { workspace = true }
smol = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true, features = ["executor", "thread-pool"] }
